--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,8 +22,9 @@ security:
                     - App\Security\LoginAuthenticator
             logout:
                 path: app_logout
+                target: recettes_index
                 # where to redirect after logout
-                # target: app_any_route
+                # 
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
